public/css/main.css
@import 'https://fonts.googleapis.com/css?family=Source+Sans+Pro:400|Josefin+Sans';

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font: inherit;
    font-size: 100%;
    vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, menu, nav, section {
    display: block;
}

body {
    line-height: 1;
}

ol, ul {
    list-style: none;
}

blockquote, q {
    quotes: none;
}

blockquote:before, blockquote:after,
q:before, q:after {
    content: '';
}

table {
    border-collapse: collapse;
    border-spacing: 0;
}

a {
    text-decoration: none;
    color: #0091EA;
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html,body {
    background-color: #232323;
    font-family: 'Source Sans Pro', sans-serif;
    font-weight: 400;
    font-size: 16px;
    height: 100%;
    width: 100%;
}

header {
    position: absolute;
    width: 100%;
    /*height: 35px;*/
    color: #fff;
    font-family: 'Source Sans Pro', sans-serif;
    padding-left: 20px;
    padding-top: 20px;
    padding-bottom: 20px;
    box-sizing: border-box;
    height: 80px;
    z-index: 100;
}

.repo-link {
    color: white;
}

.header-text {
    float: left;
    font-size: 2em;
    line-height: 1em;
}

.offline-text {
    font-size: 0.4em;
    visibility: hidden;
}

.events-remaining {
    float:right;
    margin-right: 5%;
    margin-top: 30px;
}

.events-remaining-text, .events-remaining-value {
    font-size: 0.8em;
    visibility: hidden;
}

#volumeSlider {
    cursor:pointer;
    position: absolute;
    top: 30px;
    right: 40px;
    width: 100px;
    opacity: 0.3;
    border-radius: 5px;
}

#volumeSlider:hover {
    cursor:pointer;
    opacity: 0.9;
}

#area {
    width: 100%;
    position: relative;
    height: 100%;
}

svg {
    height: 100%;
    display: block;
    background-color: #232323;
}

svg text {
    color: #FFFFFF;
}

circle {
    fill-opacity: 0.8;
}

.label {
    font: 1.0em 'Source Sans Pro', sans-serif;
    text-shadow:1px 1px 0 rgb(28, 39, 51),
    -1px -1px 0 rgb(28, 39, 51),
    1px -1px 0 rgb(28, 39, 51),
    -1px 1px 0 rgb(28, 39, 51),
    0 1px 0 rgb(28, 39, 51),
    1px 0 0 rgb(28, 39, 51),
    0 -1px 0 rgb(28, 39, 51),
    -1px 0 0 rgb(28, 39, 51);
}

.online-users-div {
    text-align: center;
    position: absolute;
    bottom: 60px;
    width: 100%;
    margin: 0 auto;
    font-size: 0.9em;
    z-index: 1;
    opacity: 0.5;
    visibility: hidden;
}

.online-users-text {
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 1em;
    color: #E0E0E0;
}

.site-description {
    font-size: 1em;
    line-height: 1.6em;
    width: 50%;
    margin: 50px auto 0;
}

@media only screen and (max-device-width: 480px) {
    .online-users-div {
        margin-left: 20px;
        text-align: left;
    }
}

